<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Agenda</string>

    <string name="label_loading">Loading…</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>

    <!-- Sign In -->

    <string name="label_signin">Sign In</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_or">or</string>
    <string name="label_signup">Sign Up</string>
    <string name="msg_wrong_credentials">Wrong email/password.</string>
    <string name="msg_cannot_signin">Unable to sign in.</string>

    <!-- Sign Up -->

    <string name="label_name">Name</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="msg_sign_up_success">Your account was created, sign in now!</string>
    <string name="msg_email_already_used">This email is already in use.</string>
    <string name="msg_cannot_signup">Unable to sign up.</string>

    <!-- Forgot Password -->

    <string name="label_recover_account">Recover Account</string>
    <string name="label_send_email">Send Email</string>
    <string name="msg_recovery_email_sent">A recovery email was sent to you.</string>
    <string name="msg_email_not_found">Email not found.</string>
    <string name="msg_cannot_recover_email">Unable to send a recovery email.</string>

    <!-- Topics -->

    <string name="label_topics">Topics</string>
    <string name="label_open_topics">Open</string>
    <string name="label_closed_topics">Closed</string>
    <string name="label_no_topics">No topics.</string>
    <string name="msg_cannot_load_topics">Unable to load the topics.</string>

    <string name="label_add_topic">Add Topic</string>
    <string name="label_title">Title</string>
    <string name="label_brief_description">Brief Description</string>
    <string name="label_details">Details</string>
    <string name="label_add">Add</string>
    <string name="msg_topic_added">Your topic was added!</string>
    <string name="msg_cannot_add_topic">Unable to add the topic.</string>
    <string name="msg_no_user_signed">There\'s no user signed.</string>

    <string name="label_close">Close</string>
    <string name="label_closing_topic">Closing topic…</string>
    <string name="label_reopen">Reopen</string>
    <string name="label_reopening_topic">Reopening topic…</string>
    <string name="msg_close_topic">Are you sure you want to close this topic?</string>
    <string name="msg_topic_closed">The topic was closed</string>
    <string name="msg_reopen_topic">Are you sure you want to reopen this topic?</string>
    <string name="msg_topic_reopened">The topic was reopened</string>

    <!-- Profile  -->

    <string name="label_profile_menu">My Profile</string>
    <string name="label_profile">Profile</string>
    <string name="label_signout">Sign Out</string>
    <string name="msg_signout">Are you sure you want to sign out?</string>
    <string name="msg_exiting">Exiting…</string>

</resources>
